todo-app/manifest/base/todo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: todoapp-storage
          persistentVolumeClaim:
            claimName: todoapp-claim
      containers:
        - name: todoapp
          image: stacvirus/todo-app:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: todoapp-storage
            mountPath: /usr/src/app/data
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8000
        - name: todo-backend
          image: stacvirus/todo-backend:latest
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8080
