todo-app/manifest/base/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports: 
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: postgresapp
